# neutral-ipc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-release.yml
clients/: README.md
clients/go/: README.md
clients/node/: README.md
clients/node/neutral_ipc_template/: NeutralIpcTemplate.js  NeutralIpcTemplate.min.js
clients/php/: README.md
clients/python/: README.md
clients/rust/: README.md
debian/: postinst  prerm
debian/etc/: neutral-ipc-cfg.json
debian/system/: neutral-ipc.service
src/: main.rs
