[package]
name = "neutral-ipc"
license = "Apache-2.0"
version = "1.3.0-beta.6.post1"
edition = "2021"
authors = ["FranBarInstance <none>"]
homepage = "https://franbarinstance.github.io/neutralts/"
repository = "https://franbarinstance.github.io/neutral-ipc/"
documentation = "https://franbarinstance.github.io/neutralts-docs/docs/neutralts/"
description = "IPC server for the Neutral TS template engine"
keywords = ["html-templating", "html-templating", "template-engine", "html", "web"]
categories = ["template-engine", "web-programming"]

[package.metadata.deb]
maintainer = "FranBarInstance <none>"
license-file = "LICENSE"
priority = "optional"
section = "utils"
depends = [
    "adduser",
    "coreutils"
]
assets = [
    { source = "target/release/neutral-ipc", dest = "/usr/bin/neutral-ipc", mode = "0755" },
    { source = "debian/etc/neutral-ipc-cfg.json", dest = "/etc/neutral-ipc-cfg.json", mode = "0644" },
    { source = "debian/system/neutral-ipc.service", dest = "/lib/systemd/system/neutral-ipc.service", mode = "0644" }
]
maintainer-scripts = "debian/"
extended-description = """\
Neutral TS IPC Server for template rendering.
Provides a TCP/IP interface for Neutral TS template engine.
"""

[dependencies]
neutralts = "1.3.0-beta6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# strip = true
# panic = "abort"
